meta_2/y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition
    3                         | FunctionsAndDeclarations FunctionDeclaration
    4                         | FunctionsAndDeclarations Declaration
    5                         | FunctionDefinition
    6                         | FunctionDeclaration
    7                         | Declaration

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    9 FunctionBody: LBRACE DeclarationAndStatements RBRACE
   10             | LBRACE RBRACE

   11 DeclarationAndStatements: DeclarationAndStatements Statement
   12                         | DeclarationAndStatements Declaration
   13                         | Statement
   14                         | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   16 FunctionDeclarator: IDENTIFIER LPAR ParameterList RPAR

   17 ParameterList: ParameterDeclaration
   18              | ParameterList COMMA ParameterDeclaration

   19 ParameterDeclaration: TypeSpec IDENTIFIER
   20                     | TypeSpec

   21 Declaration: TypeSpec Declarator AuxDeclaration SEMI
   22            | error SEMI

   23 AuxDeclaration: AuxDeclaration COMMA Declarator
   24               | ε

   25 TypeSpec: CHR
   26         | INT
   27         | VOID
   28         | SHORT
   29         | DOUBLE

   30 Declarator: IDENTIFIER ASSIGN Expr_comma
   31           | IDENTIFIER

   32 Statement_error: error SEMI
   33                | Statement

   34 AuxStatement: AuxStatement Statement_error
   35             | Statement_error

   36 Statement: LBRACE AuxStatement RBRACE
   37          | SEMI
   38          | LBRACE error RBRACE
   39          | LBRACE RBRACE
   40          | Expr_comma SEMI
   41          | IF LPAR Expr_comma RPAR Statement_error ELSE Statement_error
   42          | IF LPAR Expr_comma RPAR Statement_error
   43          | WHILE LPAR Expr_comma RPAR Statement_error
   44          | RETURN Expr_comma SEMI
   45          | RETURN SEMI

   46 Expr_comma: Expr_comma COMMA Expr
   47           | Expr

   48 Expr: IDENTIFIER LPAR error RPAR
   49     | LPAR error RPAR
   50     | Expr ASSIGN Expr
   51     | Expr PLUS Expr
   52     | Expr MINUS Expr
   53     | Expr MUL Expr
   54     | Expr DIV Expr
   55     | Expr MOD Expr
   56     | Expr OR Expr
   57     | Expr AND Expr
   58     | Expr BITWISEAND Expr
   59     | Expr BITWISEOR Expr
   60     | Expr BITWISEXOR Expr
   61     | Expr EQ Expr
   62     | Expr NE Expr
   63     | Expr LE Expr
   64     | Expr GE Expr
   65     | Expr LT Expr
   66     | Expr GT Expr
   67     | PLUS Expr
   68     | MINUS Expr
   69     | NOT Expr
   70     | IDENTIFIER LPAR RPAR
   71     | IDENTIFIER LPAR Expr_comma RPAR
   72     | IDENTIFIER
   73     | NATURAL
   74     | CHRLIT
   75     | DECIMAL
   76     | LPAR Expr_comma RPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 22 32 38 48 49
    BITWISEAND (258) 58
    BITWISEOR (259) 59
    BITWISEXOR (260) 60
    AND (261) 57
    ASSIGN (262) 30 50
    MUL (263) 53
    COMMA (264) 18 23 46
    DIV (265) 54
    EQ (266) 61
    GE (267) 64
    GT (268) 66
    LBRACE (269) 9 10 36 38 39
    LE (270) 63
    LPAR (271) 16 41 42 43 48 49 70 71 76
    LT (272) 65
    MINUS (273) 52 68
    MOD (274) 55
    NE (275) 62
    NOT (276) 69
    OR (277) 56
    PLUS (278) 51 67
    RBRACE (279) 9 10 36 38 39
    RPAR (280) 16 41 42 43 48 49 70 71 76
    SEMI (281) 15 21 22 32 37 40 44 45
    CHR (282) 25
    ELSE (283) 41
    WHILE (284) 43
    IF (285) 41 42
    INT (286) 26
    SHORT (287) 28
    DOUBLE (288) 29
    RETURN (289) 44 45
    VOID (290) 27
    IDENTIFIER <lexeme> (291) 16 19 30 31 48 70 71 72
    DECIMAL <lexeme> (292) 75
    NATURAL <lexeme> (293) 73
    CHRLIT <lexeme> (294) 74
    RESERVED <lexeme> (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Program <node> (42)
        on left: 1
        on right: 0
    FunctionsAndDeclarations <node> (43)
        on left: 2 3 4 5 6 7
        on right: 1 2 3 4
    FunctionDefinition <node> (44)
        on left: 8
        on right: 2 5
    FunctionBody <node> (45)
        on left: 9 10
        on right: 8
    DeclarationAndStatements <node> (46)
        on left: 11 12 13 14
        on right: 9 11 12
    FunctionDeclaration <node> (47)
        on left: 15
        on right: 3 6
    FunctionDeclarator <node> (48)
        on left: 16
        on right: 8 15
    ParameterList <node> (49)
        on left: 17 18
        on right: 16 18
    ParameterDeclaration <node> (50)
        on left: 19 20
        on right: 17 18
    Declaration <node> (51)
        on left: 21 22
        on right: 4 7 12 14
    AuxDeclaration <node> (52)
        on left: 23 24
        on right: 21 23
    TypeSpec <node> (53)
        on left: 25 26 27 28 29
        on right: 8 15 19 20 21
    Declarator <node> (54)
        on left: 30 31
        on right: 21 23
    Statement_error <node> (55)
        on left: 32 33
        on right: 34 35 41 42 43
    AuxStatement <node> (56)
        on left: 34 35
        on right: 34 36
    Statement <node> (57)
        on left: 36 37 38 39 40 41 42 43 44 45
        on right: 11 13 33
    Expr_comma <node> (58)
        on left: 46 47
        on right: 30 40 41 42 43 44 46 71 76
    Expr <node> (59)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 46 47 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69


State 0

    0 $accept: • Program $end
    1 Program: • FunctionsAndDeclarations
    2 FunctionsAndDeclarations: • FunctionsAndDeclarations FunctionDefinition
    3                         | • FunctionsAndDeclarations FunctionDeclaration
    4                         | • FunctionsAndDeclarations Declaration
    5                         | • FunctionDefinition
    6                         | • FunctionDeclaration
    7                         | • Declaration
    8 FunctionDefinition: • TypeSpec FunctionDeclarator FunctionBody
   15 FunctionDeclaration: • TypeSpec FunctionDeclarator SEMI
   21 Declaration: • TypeSpec Declarator AuxDeclaration SEMI
   22            | • error SEMI
   25 TypeSpec: • CHR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE

    error   shift, and go to state 1
    CHR     shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 1

   22 Declaration: error • SEMI

    SEMI  shift, and go to state 13


State 2

   25 TypeSpec: CHR •

    $default  reduce using rule 25 (TypeSpec)


State 3

   26 TypeSpec: INT •

    $default  reduce using rule 26 (TypeSpec)


State 4

   28 TypeSpec: SHORT •

    $default  reduce using rule 28 (TypeSpec)


State 5

   29 TypeSpec: DOUBLE •

    $default  reduce using rule 29 (TypeSpec)


State 6

   27 TypeSpec: VOID •

    $default  reduce using rule 27 (TypeSpec)


State 7

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 8

    1 Program: FunctionsAndDeclarations •  [$end]
    2 FunctionsAndDeclarations: FunctionsAndDeclarations • FunctionDefinition
    3                         | FunctionsAndDeclarations • FunctionDeclaration
    4                         | FunctionsAndDeclarations • Declaration
    8 FunctionDefinition: • TypeSpec FunctionDeclarator FunctionBody
   15 FunctionDeclaration: • TypeSpec FunctionDeclarator SEMI
   21 Declaration: • TypeSpec Declarator AuxDeclaration SEMI
   22            | • error SEMI
   25 TypeSpec: • CHR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE

    error   shift, and go to state 1
    CHR     shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 1 (Program)

    FunctionDefinition   go to state 15
    FunctionDeclaration  go to state 16
    Declaration          go to state 17
    TypeSpec             go to state 12


State 9

    5 FunctionsAndDeclarations: FunctionDefinition •

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 10

    6 FunctionsAndDeclarations: FunctionDeclaration •

    $default  reduce using rule 6 (FunctionsAndDeclarations)


State 11

    7 FunctionsAndDeclarations: Declaration •

    $default  reduce using rule 7 (FunctionsAndDeclarations)


State 12

    8 FunctionDefinition: TypeSpec • FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec • FunctionDeclarator SEMI
   16 FunctionDeclarator: • IDENTIFIER LPAR ParameterList RPAR
   21 Declaration: TypeSpec • Declarator AuxDeclaration SEMI
   30 Declarator: • IDENTIFIER ASSIGN Expr_comma
   31           | • IDENTIFIER

    IDENTIFIER  shift, and go to state 18

    FunctionDeclarator  go to state 19
    Declarator          go to state 20


State 13

   22 Declaration: error SEMI •

    $default  reduce using rule 22 (Declaration)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition •

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 16

    3 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDeclaration •

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 17

    4 FunctionsAndDeclarations: FunctionsAndDeclarations Declaration •

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 18

   16 FunctionDeclarator: IDENTIFIER • LPAR ParameterList RPAR
   30 Declarator: IDENTIFIER • ASSIGN Expr_comma
   31           | IDENTIFIER •  [COMMA, SEMI]

    ASSIGN  shift, and go to state 21
    LPAR    shift, and go to state 22

    $default  reduce using rule 31 (Declarator)


State 19

    8 FunctionDefinition: TypeSpec FunctionDeclarator • FunctionBody
    9 FunctionBody: • LBRACE DeclarationAndStatements RBRACE
   10             | • LBRACE RBRACE
   15 FunctionDeclaration: TypeSpec FunctionDeclarator • SEMI

    LBRACE  shift, and go to state 23
    SEMI    shift, and go to state 24

    FunctionBody  go to state 25


State 20

   21 Declaration: TypeSpec Declarator • AuxDeclaration SEMI
   23 AuxDeclaration: • AuxDeclaration COMMA Declarator
   24               | ε •

    $default  reduce using rule 24 (AuxDeclaration)

    AuxDeclaration  go to state 26


State 21

   30 Declarator: IDENTIFIER ASSIGN • Expr_comma
   46 Expr_comma: • Expr_comma COMMA Expr
   47           | • Expr
   48 Expr: • IDENTIFIER LPAR error RPAR
   49     | • LPAR error RPAR
   50     | • Expr ASSIGN Expr
   51     | • Expr PLUS Expr
   52     | • Expr MINUS Expr
   53     | • Expr MUL Expr
   54     | • Expr DIV Expr
   55     | • Expr MOD Expr
   56     | • Expr OR Expr
   57     | • Expr AND Expr
   58     | • Expr BITWISEAND Expr
   59     | • Expr BITWISEOR Expr
   60     | • Expr BITWISEXOR Expr
   61     | • Expr EQ Expr
   62     | • Expr NE Expr
   63     | • Expr LE Expr
   64     | • Expr GE Expr
   65     | • Expr LT Expr
   66     | • Expr GT Expr
   67     | • PLUS Expr
   68     | • MINUS Expr
   69     | • NOT Expr
   70     | • IDENTIFIER LPAR RPAR
   71     | • IDENTIFIER LPAR Expr_comma RPAR
   72     | • IDENTIFIER
   73     | • NATURAL
   74     | • CHRLIT
   75     | • DECIMAL
   76     | • LPAR Expr_comma RPAR

    LPAR        shift, and go to state 27
    MINUS       shift, and go to state 28
    NOT         shift, and go to state 29
    PLUS        shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    DECIMAL     shift, and go to state 32
    NATURAL     shift, and go to state 33
    CHRLIT      shift, and go to state 34

    Expr_comma  go to state 35
    Expr        go to state 36


State 22

   16 FunctionDeclarator: IDENTIFIER LPAR • ParameterList RPAR
   17 ParameterList: • ParameterDeclaration
   18              | • ParameterList COMMA ParameterDeclaration
   19 ParameterDeclaration: • TypeSpec IDENTIFIER
   20                     | • TypeSpec
   25 TypeSpec: • CHR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE

    CHR     shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 37
    ParameterDeclaration  go to state 38
    TypeSpec              go to state 39


State 23

    9 FunctionBody: LBRACE • DeclarationAndStatements RBRACE
   10             | LBRACE • RBRACE
   11 DeclarationAndStatements: • DeclarationAndStatements Statement
   12                         | • DeclarationAndStatements Declaration
   13                         | • Statement
   14                         | • Declaration
   21 Declaration: • TypeSpec Declarator AuxDeclaration SEMI
   22            | • error SEMI
   25 TypeSpec: • CHR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE
   36 Statement: • LBRACE AuxStatement RBRACE
   37          | • SEMI
   38          | • LBRACE error RBRACE
   39          | • LBRACE RBRACE
   40          | • Expr_comma SEMI
   41          | • IF LPAR Expr_comma RPAR Statement_error ELSE Statement_error
   42          | • IF LPAR Expr_comma RPAR Statement_error
   43          | • WHILE LPAR Expr_comma RPAR Statement_error
   44          | • RETURN Expr_comma SEMI
   45          | • RETURN SEMI
   46 Expr_comma: • Expr_comma COMMA Expr
   47           | • Expr
   48 Expr: • IDENTIFIER LPAR error RPAR
   49     | • LPAR error RPAR
   50     | • Expr ASSIGN Expr
   51     | • Expr PLUS Expr
   52     | • Expr MINUS Expr
   53     | • Expr MUL Expr
   54     | • Expr DIV Expr
   55     | • Expr MOD Expr
   56     | • Expr OR Expr
   57     | • Expr AND Expr
   58     | • Expr BITWISEAND Expr
   59     | • Expr BITWISEOR Expr
   60     | • Expr BITWISEXOR Expr
   61     | • Expr EQ Expr
   62     | • Expr NE Expr
   63     | • Expr LE Expr
   64     | • Expr GE Expr
   65     | • Expr LT Expr
   66     | • Expr GT Expr
   67     | • PLUS Expr
   68     | • MINUS Expr
   69     | • NOT Expr
   70     | • IDENTIFIER LPAR RPAR
   71     | • IDENTIFIER LPAR Expr_comma RPAR
   72     | • IDENTIFIER
   73     | • NATURAL
   74     | • CHRLIT
   75     | • DECIMAL
   76     | • LPAR Expr_comma RPAR

    error       shift, and go to state 1
    LBRACE      shift, and go to state 40
    LPAR        shift, and go to state 27
    MINUS       shift, and go to state 28
    NOT         shift, and go to state 29
    PLUS        shift, and go to state 30
    RBRACE      shift, and go to state 41
    SEMI        shift, and go to state 42
    CHR         shift, and go to state 2
    WHILE       shift, and go to state 43
    IF          shift, and go to state 44
    INT         shift, and go to state 3
    SHORT       shift, and go to state 4
    DOUBLE      shift, and go to state 5
    RETURN      shift, and go to state 45
    VOID        shift, and go to state 6
    IDENTIFIER  shift, and go to state 31
    DECIMAL     shift, and go to state 32
    NATURAL     shift, and go to state 33
    CHRLIT      shift, and go to state 34

    DeclarationAndStatements  go to state 46
    Declaration               go to state 47
    TypeSpec                  go to state 48
    Statement                 go to state 49
    Expr_comma                go to state 50
    Expr                      go to state 36


State 24

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI •

    $default  reduce using rule 15 (FunctionDeclaration)


State 25

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody •

    $default  reduce using rule 8 (FunctionDefinition)


State 26

   21 Declaration: TypeSpec Declarator AuxDeclaration • SEMI
   23 AuxDeclaration: AuxDeclaration • COMMA Declarator

    COMMA  shift, and go to state 51
    SEMI   shift, and go to state 52


State 27

   46 Expr_comma: • Expr_comma COMMA Expr
   47           | • Expr
   48 Expr: • IDENTIFIER LPAR error RPAR
   49     | • LPAR error RPAR
   49     | LPAR • error RPAR
   50     | • Expr ASSIGN Expr
   51     | • Expr PLUS Expr
   52     | • Expr MINUS Expr
   53     | • Expr MUL Expr
   54     | • Expr DIV Expr
   55     | • Expr MOD Expr
   56     | • Expr OR Expr
   57     | • Expr AND Expr
   58     | • Expr BITWISEAND Expr
   59     | • Expr BITWISEOR Expr
   60     | • Expr BITWISEXOR Expr
   61     | • Expr EQ Expr
   62     | • Expr NE Expr
   63     | • Expr LE Expr
   64     | • Expr GE Expr
   65     | • Expr LT Expr
   66     | • Expr GT Expr
   67     | • PLUS Expr
   68     | • MINUS Expr
   69     | • NOT Expr
   70     | • IDENTIFIER LPAR RPAR
   71     | • IDENTIFIER LPAR Expr_comma RPAR
   72     | • IDENTIFIER
   73     | • NATURAL
   74     | • CHRLIT
   75     | • DECIMAL
   76     | • LPAR Expr_comma RPAR
   76     | LPAR • Expr_comma RPAR

    error       shift, and go to state 53
    LPAR        shift, and go to state 27
    MINUS       shift, and go to state 28
    NOT         shift, and go to state 29
    PLUS        shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    DECIMAL     shift, and go to state 32
    NATURAL     shift, and go to state 33
    CHRLIT      shift, and go to state 34

    Expr_comma  go to state 54
    Expr        go to state 36


State 28

   48 Expr: • IDENTIFIER LPAR error RPAR
   49     | • LPAR error RPAR
   50     | • Expr ASSIGN Expr
   51     | • Expr PLUS Expr
   52     | • Expr MINUS Expr
   53     | • Expr MUL Expr
   54     | • Expr DIV Expr
   55     | • Expr MOD Expr
   56     | • Expr OR Expr
   57     | • Expr AND Expr
   58     | • Expr BITWISEAND Expr
   59     | • Expr BITWISEOR Expr
   60     | • Expr BITWISEXOR Expr
   61     | • Expr EQ Expr
   62     | • Expr NE Expr
   63     | • Expr LE Expr
   64     | • Expr GE Expr
   65     | • Expr LT Expr
   66     | • Expr GT Expr
   67     | • PLUS Expr
   68     | • MINUS Expr
   68     | MINUS • Expr
   69     | • NOT Expr
   70     | • IDENTIFIER LPAR RPAR
   71     | • IDENTIFIER LPAR Expr_comma RPAR
   72     | • IDENTIFIER
   73     | • NATURAL
   74     | • CHRLIT
   75     | • DECIMAL
   76     | • LPAR Expr_comma RPAR

    LPAR        shift, and go to state 27
    MINUS       shift, and go to state 28
    NOT         shift, and go to state 29
    PLUS        shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    DECIMAL     shift, and go to state 32
    NATURAL     shift, and go to state 33
    CHRLIT      shift, and go to state 34

    Expr  go to state 55


State 29

   48 Expr: • IDENTIFIER LPAR error RPAR
   49     | • LPAR error RPAR
   50     | • Expr ASSIGN Expr
   51     | • Expr PLUS Expr
   52     | • Expr MINUS Expr
   53     | • Expr MUL Expr
   54     | • Expr DIV Expr
   55     | • Expr MOD Expr
   56     | • Expr OR Expr
   57     | • Expr AND Expr
   58     | • Expr BITWISEAND Expr
   59     | • Expr BITWISEOR Expr
   60     | • Expr BITWISEXOR Expr
   61     | • Expr EQ Expr
   62     | • Expr NE Expr
   63     | • Expr LE Expr
   64     | • Expr GE Expr
   65     | • Expr LT Expr
   66     | • Expr GT Expr
   67     | • PLUS Expr
   68     | • MINUS Expr
   69     | • NOT Expr
   69     | NOT • Expr
   70     | • IDENTIFIER LPAR RPAR
   71     | • IDENTIFIER LPAR Expr_comma RPAR
   72     | • IDENTIFIER
   73     | • NATURAL
   74     | • CHRLIT
   75     | • DECIMAL
   76     | • LPAR Expr_comma RPAR

    LPAR        shift, and go to state 27
    MINUS       shift, and go to state 28
    NOT         shift, and go to state 29
    PLUS        shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    DECIMAL     shift, and go to state 32
    NATURAL     shift, and go to state 33
    CHRLIT      shift, and go to state 34
